# Radium-Engine

./: .gitmodules  CMakeLists.txt  README.md
Plugins/PointyCloud/src/: CMakeLists.txt  ComputePointyCloudTask.cpp  ComputePointyCloudTask.hpp  PointyCloudComponent.cpp  PointyCloudComponent.hpp  PointyCloudPlugin.cpp  PointyCloudPlugin.hpp  PointyCloudSystem.cpp  PointyCloudSystem.hpp  defines.h
Plugins/PointyCloud/src/APSS/: NeighborsSelection.cpp  NeighborsSelection.hpp  NeighborsSelectionWithRegularGrid.cpp  NeighborsSelectionWithRegularGrid.hpp  OrthogonalProjection.cpp  OrthogonalProjection.hpp  Point.h  PointyCloud.hpp  PointyCloud.inl  RegularGrid.cpp  RegularGrid.hpp  RegularGridBuilder.cpp  RegularGridBuilder.hpp  UpSampler.cpp  UpSampler.h  UpSampler.hpp  UpSamplerSimple.cpp  UpSamplerSimple.hpp  UpSamplerUnshaken.cpp  UpSamplerUnshaken.hpp  UsefulPointsSelection.cpp  UsefulPointsSelection.hpp  UsefulPointsSelection.inl  upsamplersimple.cpp  upsamplersimple.hpp
Plugins/PointyCloud/src/APSS/NeighborsSelection/: NeighborsProcessor.hpp  NeighborsSelection.cpp  NeighborsSelection.hpp  NeighborsSelectionWithRegularGrid.cpp  (+1 more)
Plugins/PointyCloud/src/Cuda/: APSS.cu  APSS.h  APSSTask.hpp  Neighbors.h  ProjectionKernel.h  RegularGrid.cu  RegularGrid.h  SelectionKernel.h  Test.h  UpsamplingKernel.h  defines.h
Plugins/PointyCloud/src/Renderer/: PointyCloudRenderer.cpp  PointyCloudRenderer.hpp
Plugins/PointyCloud/src/UI/: PointyCloudUI.cpp  PointyCloudUI.h  PointyCloudUI.ui
Plugins/PointyCloud/src/misc/: PointyCloudFactory.cpp  PointyCloudFactory.hpp
(+78 files in other folders)
